terraform/autosacling.tf
#AutoScaling Launch Template
resource "aws_launch_template" "tf-launchtemplate" {
  name                   = var.LAUNCH_TEMPLATE_NAME
  image_id               = data.aws_ami.packer_ami.id
  instance_type          = var.INSTANCE_TYPE
  vpc_security_group_ids = [aws_security_group.instance-securitygroup.id]
  user_data              = data.cloudinit_config.elb_instance_userdata.rendered
  update_default_version = true
  iam_instance_profile {
    name = module.ssm-role.instance_profile_name
  }
}

#Autoscaling Group
resource "aws_autoscaling_group" "levelup-autoscaling" {
  name                      = var.AUTOSCALING_GROUP_NAME
  vpc_zone_identifier       = [module.network.public_subnet_A_id, module.network.public_subnet_B_id]
  min_size                  = var.AUTOSCALING_GROUP_MIN_SIZE
  max_size                  = var.AUTOSCALING_GROUP_MAX_SIZE
  health_check_grace_period = var.HEALTH_CHECK_GRACE_PERIOD
  health_check_type         = var.HEALTH_CHECK_TYPE
  load_balancers            = [aws_elb.tf-elb.name]
  force_delete              = true
  launch_template {
    id = aws_launch_template.tf-launchtemplate.id
  }
  tag {
    key                 = "Name"
    value               = local.ASG_NAME
    propagate_at_launch = true
  }
}

output "ELB" {
  value = aws_elb.tf-elb.dns_name
}
